--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 
 }
 .container {
-
+    max-width: 1140px;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -110,6 +110,10 @@ body {
     width: 500px;
     margin-top: 120px;
     margin-bottom: 120px;
+}
+.hero-img{
+    margin-bottom:0px;
+    padding-bottom: 0px;
 }
 .hero-header {
     font-family: 'Open Sans Condensed' sans-serif;
