--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ body {
     font-weight: 700;
     font-size: 36px;
     line-height: 43px;
-    margin-top: o;
+    margin-top: 0;
     margin-bottom: 16px;
 }
 .hero-text {
